--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,7 @@
 {
-  "extends": "next",
+  "extends": "next/core-web-vitals",
   "rules": {
-    "react/no-unescaped-entities": "off",
+    "react/no-unescaped-entities": 0,
     "@next/next/no-page-custom-font": "off"
   }
 }
